# mrbeast

./: Cargo.toml  readme.md
beast_assets/: Cargo.toml  build.rs
beast_assets/src/: lib.rs
mr_beast/: Cargo.toml  build.rs  rec.rc
mr_beast/src/: main.rs
