[package]
name = "beast_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = { version = "0.24.6", default-features = false, features = ["jpeg", "jpeg_rayon"] }
lazy_static = "1.4.0"
rayon = "1.7.0"
rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }


[build-dependencies]
glob = "0.3.1"