[package]
name = "mrbeast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }
winit = "0.28.6"
beast_assets = { path = "../beast_assets" }
softbuffer = "0.3.0"
game-loop = { version = "*", features = ["winit"] } # or tao
[build-dependencies]
embed-resource = "2.1.1"
